--- a/Pickup/Pickup/Info.plist
+++ b/Pickup/Pickup/Info.plist
@@ -43,5 +43,7 @@
 	</array>
     <key>NSMicrophoneUsageDescription</key>
     <string>Play root notes of each chord into the microphone to form a chord progression.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Pickup will use the camera so you can take pictures of your gear.</string>
 </dict>
 </plist>
